# fge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt  camera.hpp  main.cpp  shader.hpp
config/: config.lua  imgui_editor.ini
examples/: CMakeLists.txt
examples/common/: filesystem.hpp  root_directory.hpp.in
examples/cubes/: cubes.cpp
examples/shadow_map/: shadow_map.cpp
fge/: CMakeLists.txt
fge/editor/: CMakeLists.txt  main.cpp
fge/engine/: CMakeLists.txt
fge/engine/cmake/: FgeConfig.cmake.in
fge/engine/docs/: CMakeLists.txt  Doxyfile.in
fge/engine/include/: application.hpp  version.hpp.in
fge/engine/src/: application.cpp
fge/examples/: CMakeLists.txt
fge/examples/simplegame/: CMakeLists.txt
res/meshes/: character.dae  cube.dae  plane.dae  sphere.dae
res/scripts/: move_character.lua  test_script.lua
res/shaders/: blinn_phong.frag  blinn_phong.vert  unlit.frag  unlit.vert
src/: CMakeLists.txt  allocator.hpp  command_bucket.cpp  command_bucket.hpp  command_packet.cpp  command_packet.hpp  commands.hpp  gl_backend.cpp  gl_backend.hpp  graphic_backend.cpp  graphic_backend.hpp  graphic_backend_types.hpp  linear_allocator.hpp  util.hpp
src/editor/: CMakeLists.txt  editor_layer.cpp  editor_layer.hpp  main.cpp
src/editor/imgui_views/: dockspace.cpp  dockspace.hpp  viewport.cpp  viewport.hpp
src/engine/: CMakeLists.txt  application.cpp  application.hpp  broadcast.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  std.hpp
src/engine/config/: config_manager.cpp  config_manager.hpp
src/engine/ecs/: entity.hpp  fwd.hpp  registry.hpp  sparse_set.hpp  storage.hpp  type_info.hpp  view.hpp
src/engine/event/: event.hpp  event_manager.hpp  member_function_handler.hpp  signal.hpp
src/engine/file/: file_manager.cpp  file_manager.hpp  root_directory.hpp.in
src/engine/gfx/: camera.cpp  camera.hpp  command_bucket.cpp  command_bucket.hpp  command_packet.cpp  command_packet.hpp  commands.cpp  commands.hpp  graphic_backend.cpp  graphic_backend.hpp  graphic_backend_context.hpp  graphic_backend_types.cpp  graphic_backend_types.hpp  material.cpp  material.hpp  renderer.cpp  renderer.hpp  window.hpp
src/engine/gfx/backend/: backends.hpp  glfw_window.cpp  glfw_window.hpp  opengl.hpp  opengl_backend.cpp  opengl_backend.hpp  opengl_backend_types.hpp  opengl_backend_util.cpp  opengl_backend_util.hpp
src/engine/graphic/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  camera_controller.hpp  default_material.cpp  default_material.hpp  directional_light.hpp  forward_render_path.cpp  forward_render_path.hpp  framebuffer.hpp  graphic_manager.cpp  graphic_manager.hpp  grid.cpp  grid.hpp  imgui.hpp  index_buffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_base.hpp  mesh_material.hpp  point_light.hpp  render_info.cpp  render_info.hpp  render_path.hpp  render_view.cpp  render_view.hpp  renderbuffer.hpp  renderer.hpp  shader.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  skeleton.cpp  skeleton.hpp  skinned_mesh.cpp  skinned_mesh.hpp  spot_light.hpp  texture.hpp  (+9 more)
src/engine/log/: io_log_sink.cpp  io_log_sink.hpp  log.cpp  log.hpp  log_sink.hpp
src/engine/math/: math.hpp
src/engine/mem/: allocator.hpp  linear_allocator.hpp
src/engine/physic/: collision_shape.hpp  physic_manager.cpp  physic_manager.hpp  physic_world.hpp  rigid_body.hpp
src/engine/platform/bullet/: bullet_collision_shape.cpp  bullet_collision_shape.hpp  bullet_physic_world.cpp  bullet_physic_world.hpp  bullet_rigid_body.cpp  bullet_rigid_body.hpp
src/engine/platform/glfw/: glfw.hpp  glfw_window.cpp  glfw_window.hpp
src/engine/platform/opengl/: framebuffer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_window.hpp  index_buffer.cpp  index_buffer.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  util.cpp  util.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
src/engine/resources/: mesh_importer.cpp  mesh_importer.hpp  mesh_importer_common.cpp  mesh_importer_common.hpp  resource_manager.cpp  resource_manager.hpp  skinned_mesh_importer.cpp  skinned_mesh_importer.hpp
src/engine/scene/: actor.cpp  actor.hpp  component.cpp  component.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/engine/scene/components/: box_rigid_body_component.cpp  box_rigid_body_component.hpp  components.hpp  directional_light_component.cpp  directional_light_component.hpp  follow_camera_component.cpp  follow_camera_component.hpp  lua_script_component.cpp  lua_script_component.hpp  mesh_component.cpp  mesh_component.hpp  point_light_component.cpp  point_light_component.hpp  rigid_body_component.cpp  rigid_body_component.hpp  skinned_mesh_component.cpp  skinned_mesh_component.hpp  sphere_rigid_body_component.cpp  sphere_rigid_body_component.hpp
src/engine/scn/: components.hpp  scene.cpp  scene.hpp  system.hpp
src/engine/script/: script_manager.hpp
src/engine/systems/: render_system.cpp  render_system.hpp
src/engine/util/: args_parser.cpp  args_parser.hpp  assert.hpp  filesystem.cpp  filesystem.hpp  io_log_sink.cpp  io_log_sink.hpp  log.cpp  log.hpp  log_sink.cpp  log_sink.hpp  resource_root.hpp.in  time.cpp  time.hpp  util.hpp
tests/: CMakeLists.txt  tests_common.hpp  testsample.cpp
tests/engine/: CMakeLists.txt  test_application.cpp  test_broadcast.cpp
tests/engine/ecs/: CMakeLists.txt  test_registry.cpp  test_sparse_set.hpp  test_type_info.cpp
tests/engine/util/: test_args_parser.cpp
